old_first_version/TxScriptParser.py
# Generated from TxScript.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class TxScriptParser ( Parser ):

    grammarFileName = "TxScript.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'contract'", "'{'", "'resources_bound'", 
                     "':'", "'agents_bound'", "'tokens_bound'", "'global'", 
                     "'}'", "'int'", "'float'", "'bool'", "'='", "'true'", 
                     "'false'", "'query'", "'#'", "'('", "'?'", "')'", "'not'", 
                     "'!'", "'*'", "'/'", "'+'", "'-'", "'=='", "'!='", 
                     "'<'", "'>'", "'<='", "'>='", "'and'", "'&'", "'or'", 
                     "'|'", "'implies'", "'->'", "'Exists'", "'.'", "'Forall'", 
                     "'sum'", "','", "'in'", "'['", "']'", "'@time'", "'_'", 
                     "'@pre'", "'null'", "'skip'", "':='", "';'", "'if'", 
                     "'then'", "'else'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "LABEL", "LABELUPPER", "NUMBER", "REAL", "TYPE", "WS", 
                      "COMMENT", "LINE_COMMENT" ]

    RULE_contractExpr = 0
    RULE_globalVarsExpr = 1
    RULE_globalVarExpr = 2
    RULE_firstOrderFormulasExpr = 3
    RULE_firstOrderFormulaExpr = 4
    RULE_proceduresExpr = 5
    RULE_procedureExpr = 6
    RULE_preconditionsExpr = 7
    RULE_expression = 8
    RULE_pArgsExprs = 9
    RULE_pArgsExpr = 10
    RULE_bodyExpr = 11
    RULE_constantExpr = 12

    ruleNames =  [ "contractExpr", "globalVarsExpr", "globalVarExpr", "firstOrderFormulasExpr", 
                   "firstOrderFormulaExpr", "proceduresExpr", "procedureExpr", 
                   "preconditionsExpr", "expression", "pArgsExprs", "pArgsExpr", 
                   "bodyExpr", "constantExpr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    LABEL=56
    LABELUPPER=57
    NUMBER=58
    REAL=59
    TYPE=60
    WS=61
    COMMENT=62
    LINE_COMMENT=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ContractExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self.resBound = None # Token
            self.agentBound = None # Token
            self.tokenBound = None # Token
            self.gVars = None # GlobalVarsExprContext
            self.child = None # ProceduresExprContext
            self.phis = None # FirstOrderFormulasExprContext

        def LABELUPPER(self):
            return self.getToken(TxScriptParser.LABELUPPER, 0)

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(TxScriptParser.NUMBER)
            else:
                return self.getToken(TxScriptParser.NUMBER, i)

        def proceduresExpr(self):
            return self.getTypedRuleContext(TxScriptParser.ProceduresExprContext,0)


        def firstOrderFormulasExpr(self):
            return self.getTypedRuleContext(TxScriptParser.FirstOrderFormulasExprContext,0)


        def globalVarsExpr(self):
            return self.getTypedRuleContext(TxScriptParser.GlobalVarsExprContext,0)


        def getRuleIndex(self):
            return TxScriptParser.RULE_contractExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContractExpr" ):
                listener.enterContractExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContractExpr" ):
                listener.exitContractExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContractExpr" ):
                return visitor.visitContractExpr(self)
            else:
                return visitor.visitChildren(self)




    def contractExpr(self):

        localctx = TxScriptParser.ContractExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_contractExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self.match(TxScriptParser.T__0)
            self.state = 27
            localctx.name = self.match(TxScriptParser.LABELUPPER)
            self.state = 28
            self.match(TxScriptParser.T__1)
            self.state = 29
            self.match(TxScriptParser.T__2)
            self.state = 30
            self.match(TxScriptParser.T__3)
            self.state = 31
            localctx.resBound = self.match(TxScriptParser.NUMBER)
            self.state = 32
            self.match(TxScriptParser.T__4)
            self.state = 33
            self.match(TxScriptParser.T__3)
            self.state = 34
            localctx.agentBound = self.match(TxScriptParser.NUMBER)
            self.state = 35
            self.match(TxScriptParser.T__5)
            self.state = 36
            self.match(TxScriptParser.T__3)
            self.state = 37
            localctx.tokenBound = self.match(TxScriptParser.NUMBER)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==TxScriptParser.T__6:
                self.state = 38
                self.match(TxScriptParser.T__6)
                self.state = 39
                self.match(TxScriptParser.T__3)
                self.state = 40
                localctx.gVars = self.globalVarsExpr()


            self.state = 43
            localctx.child = self.proceduresExpr()
            self.state = 44
            self.match(TxScriptParser.T__7)
            self.state = 45
            localctx.phis = self.firstOrderFormulasExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GlobalVarsExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def globalVarExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TxScriptParser.GlobalVarExprContext)
            else:
                return self.getTypedRuleContext(TxScriptParser.GlobalVarExprContext,i)


        def getRuleIndex(self):
            return TxScriptParser.RULE_globalVarsExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobalVarsExpr" ):
                listener.enterGlobalVarsExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobalVarsExpr" ):
                listener.exitGlobalVarsExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobalVarsExpr" ):
                return visitor.visitGlobalVarsExpr(self)
            else:
                return visitor.visitChildren(self)




    def globalVarsExpr(self):

        localctx = TxScriptParser.GlobalVarsExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_globalVarsExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 47
                self.globalVarExpr()
                self.state = 50 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TxScriptParser.T__8) | (1 << TxScriptParser.T__9) | (1 << TxScriptParser.T__10))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GlobalVarExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.ty = None # Token
            self.name = None # Token
            self.val = None # Token

        def LABEL(self):
            return self.getToken(TxScriptParser.LABEL, 0)

        def NUMBER(self):
            return self.getToken(TxScriptParser.NUMBER, 0)

        def REAL(self):
            return self.getToken(TxScriptParser.REAL, 0)

        def getRuleIndex(self):
            return TxScriptParser.RULE_globalVarExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobalVarExpr" ):
                listener.enterGlobalVarExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobalVarExpr" ):
                listener.exitGlobalVarExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobalVarExpr" ):
                return visitor.visitGlobalVarExpr(self)
            else:
                return visitor.visitChildren(self)




    def globalVarExpr(self):

        localctx = TxScriptParser.GlobalVarExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_globalVarExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            localctx.ty = self._input.LT(1)
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TxScriptParser.T__8) | (1 << TxScriptParser.T__9) | (1 << TxScriptParser.T__10))) != 0)):
                localctx.ty = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 53
            localctx.name = self.match(TxScriptParser.LABEL)
            self.state = 54
            self.match(TxScriptParser.T__11)
            self.state = 55
            localctx.val = self._input.LT(1)
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TxScriptParser.T__12) | (1 << TxScriptParser.T__13) | (1 << TxScriptParser.NUMBER) | (1 << TxScriptParser.REAL))) != 0)):
                localctx.val = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FirstOrderFormulasExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.child = None # FirstOrderFormulaExprContext

        def firstOrderFormulaExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TxScriptParser.FirstOrderFormulaExprContext)
            else:
                return self.getTypedRuleContext(TxScriptParser.FirstOrderFormulaExprContext,i)


        def getRuleIndex(self):
            return TxScriptParser.RULE_firstOrderFormulasExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFirstOrderFormulasExpr" ):
                listener.enterFirstOrderFormulasExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFirstOrderFormulasExpr" ):
                listener.exitFirstOrderFormulasExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFirstOrderFormulasExpr" ):
                return visitor.visitFirstOrderFormulasExpr(self)
            else:
                return visitor.visitChildren(self)




    def firstOrderFormulasExpr(self):

        localctx = TxScriptParser.FirstOrderFormulasExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_firstOrderFormulasExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==TxScriptParser.T__14:
                self.state = 57
                self.match(TxScriptParser.T__14)
                self.state = 58
                self.match(TxScriptParser.T__1)
                self.state = 59
                localctx.child = self.firstOrderFormulaExpr(0)
                self.state = 60
                self.match(TxScriptParser.T__7)
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FirstOrderFormulaExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TxScriptParser.RULE_firstOrderFormulaExpr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class FunctionFormulaContext(FirstOrderFormulaExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.FirstOrderFormulaExprContext
            super().__init__(parser)
            self.child = None # Token
            self.agent = None # Token
            self.amount = None # Token
            self.token = None # Token
            self.copyFrom(ctx)

        def LABEL(self, i:int=None):
            if i is None:
                return self.getTokens(TxScriptParser.LABEL)
            else:
                return self.getToken(TxScriptParser.LABEL, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionFormula" ):
                listener.enterFunctionFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionFormula" ):
                listener.exitFunctionFormula(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionFormula" ):
                return visitor.visitFunctionFormula(self)
            else:
                return visitor.visitChildren(self)


    class TokenijnContext(FirstOrderFormulaExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.FirstOrderFormulaExprContext
            super().__init__(parser)
            self.i = None # Token
            self.j = None # Token
            self.n = None # Token
            self.copyFrom(ctx)

        def LABEL(self, i:int=None):
            if i is None:
                return self.getTokens(TxScriptParser.LABEL)
            else:
                return self.getToken(TxScriptParser.LABEL, i)
        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(TxScriptParser.NUMBER)
            else:
                return self.getToken(TxScriptParser.NUMBER, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTokenijn" ):
                listener.enterTokenijn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTokenijn" ):
                listener.exitTokenijn(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTokenijn" ):
                return visitor.visitTokenijn(self)
            else:
                return visitor.visitChildren(self)


    class NEqFormulaContext(FirstOrderFormulaExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.FirstOrderFormulaExprContext
            super().__init__(parser)
            self.left = None # FirstOrderFormulaExprContext
            self.right = None # FirstOrderFormulaExprContext
            self.copyFrom(ctx)

        def firstOrderFormulaExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TxScriptParser.FirstOrderFormulaExprContext)
            else:
                return self.getTypedRuleContext(TxScriptParser.FirstOrderFormulaExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNEqFormula" ):
                listener.enterNEqFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNEqFormula" ):
                listener.exitNEqFormula(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNEqFormula" ):
                return visitor.visitNEqFormula(self)
            else:
                return visitor.visitChildren(self)


    class MultDivEqFormulaContext(FirstOrderFormulaExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.FirstOrderFormulaExprContext
            super().__init__(parser)
            self.left = None # FirstOrderFormulaExprContext
            self.op = None # Token
            self.right = None # FirstOrderFormulaExprContext
            self.copyFrom(ctx)

        def firstOrderFormulaExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TxScriptParser.FirstOrderFormulaExprContext)
            else:
                return self.getTypedRuleContext(TxScriptParser.FirstOrderFormulaExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultDivEqFormula" ):
                listener.enterMultDivEqFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultDivEqFormula" ):
                listener.exitMultDivEqFormula(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultDivEqFormula" ):
                return visitor.visitMultDivEqFormula(self)
            else:
                return visitor.visitChildren(self)


    class LessEqFormulaContext(FirstOrderFormulaExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.FirstOrderFormulaExprContext
            super().__init__(parser)
            self.left = None # FirstOrderFormulaExprContext
            self.right = None # FirstOrderFormulaExprContext
            self.copyFrom(ctx)

        def firstOrderFormulaExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TxScriptParser.FirstOrderFormulaExprContext)
            else:
                return self.getTypedRuleContext(TxScriptParser.FirstOrderFormulaExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLessEqFormula" ):
                listener.enterLessEqFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLessEqFormula" ):
                listener.exitLessEqFormula(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLessEqFormula" ):
                return visitor.visitLessEqFormula(self)
            else:
                return visitor.visitChildren(self)


    class AtomFormulaContext(FirstOrderFormulaExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.FirstOrderFormulaExprContext
            super().__init__(parser)
            self.child = None # Token
            self.copyFrom(ctx)

        def LABEL(self):
            return self.getToken(TxScriptParser.LABEL, 0)
        def NUMBER(self):
            return self.getToken(TxScriptParser.NUMBER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtomFormula" ):
                listener.enterAtomFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtomFormula" ):
                listener.exitAtomFormula(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtomFormula" ):
                return visitor.visitAtomFormula(self)
            else:
                return visitor.visitChildren(self)


    class SumFormulaContext(FirstOrderFormulaExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.FirstOrderFormulaExprContext
            super().__init__(parser)
            self.child = None # FirstOrderFormulaExprContext
            self.var = None # Token
            self.varMin = None # Token
            self.varMax = None # Token
            self.copyFrom(ctx)

        def firstOrderFormulaExpr(self):
            return self.getTypedRuleContext(TxScriptParser.FirstOrderFormulaExprContext,0)

        def LABEL(self):
            return self.getToken(TxScriptParser.LABEL, 0)
        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(TxScriptParser.NUMBER)
            else:
                return self.getToken(TxScriptParser.NUMBER, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSumFormula" ):
                listener.enterSumFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSumFormula" ):
                listener.exitSumFormula(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSumFormula" ):
                return visitor.visitSumFormula(self)
            else:
                return visitor.visitChildren(self)


    class AndFormulaContext(FirstOrderFormulaExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.FirstOrderFormulaExprContext
            super().__init__(parser)
            self.left = None # FirstOrderFormulaExprContext
            self.right = None # FirstOrderFormulaExprContext
            self.copyFrom(ctx)

        def firstOrderFormulaExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TxScriptParser.FirstOrderFormulaExprContext)
            else:
                return self.getTypedRuleContext(TxScriptParser.FirstOrderFormulaExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAndFormula" ):
                listener.enterAndFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAndFormula" ):
                listener.exitAndFormula(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAndFormula" ):
                return visitor.visitAndFormula(self)
            else:
                return visitor.visitChildren(self)


    class AtomFormulaNContext(FirstOrderFormulaExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.FirstOrderFormulaExprContext
            super().__init__(parser)
            self.child = None # Token
            self.n = None # Token
            self.copyFrom(ctx)

        def LABEL(self, i:int=None):
            if i is None:
                return self.getTokens(TxScriptParser.LABEL)
            else:
                return self.getToken(TxScriptParser.LABEL, i)
        def NUMBER(self):
            return self.getToken(TxScriptParser.NUMBER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtomFormulaN" ):
                listener.enterAtomFormulaN(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtomFormulaN" ):
                listener.exitAtomFormulaN(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtomFormulaN" ):
                return visitor.visitAtomFormulaN(self)
            else:
                return visitor.visitChildren(self)


    class NotFormulaContext(FirstOrderFormulaExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.FirstOrderFormulaExprContext
            super().__init__(parser)
            self.child = None # FirstOrderFormulaExprContext
            self.copyFrom(ctx)

        def firstOrderFormulaExpr(self):
            return self.getTypedRuleContext(TxScriptParser.FirstOrderFormulaExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNotFormula" ):
                listener.enterNotFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNotFormula" ):
                listener.exitNotFormula(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNotFormula" ):
                return visitor.visitNotFormula(self)
            else:
                return visitor.visitChildren(self)


    class ExistsFormulaContext(FirstOrderFormulaExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.FirstOrderFormulaExprContext
            super().__init__(parser)
            self.var = None # Token
            self.child = None # FirstOrderFormulaExprContext
            self.copyFrom(ctx)

        def LABEL(self):
            return self.getToken(TxScriptParser.LABEL, 0)
        def firstOrderFormulaExpr(self):
            return self.getTypedRuleContext(TxScriptParser.FirstOrderFormulaExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExistsFormula" ):
                listener.enterExistsFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExistsFormula" ):
                listener.exitExistsFormula(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExistsFormula" ):
                return visitor.visitExistsFormula(self)
            else:
                return visitor.visitChildren(self)


    class OrFormulaContext(FirstOrderFormulaExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.FirstOrderFormulaExprContext
            super().__init__(parser)
            self.left = None # FirstOrderFormulaExprContext
            self.right = None # FirstOrderFormulaExprContext
            self.copyFrom(ctx)

        def firstOrderFormulaExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TxScriptParser.FirstOrderFormulaExprContext)
            else:
                return self.getTypedRuleContext(TxScriptParser.FirstOrderFormulaExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrFormula" ):
                listener.enterOrFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrFormula" ):
                listener.exitOrFormula(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOrFormula" ):
                return visitor.visitOrFormula(self)
            else:
                return visitor.visitChildren(self)


    class GroupFormulaContext(FirstOrderFormulaExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.FirstOrderFormulaExprContext
            super().__init__(parser)
            self.child = None # FirstOrderFormulaExprContext
            self.copyFrom(ctx)

        def firstOrderFormulaExpr(self):
            return self.getTypedRuleContext(TxScriptParser.FirstOrderFormulaExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGroupFormula" ):
                listener.enterGroupFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGroupFormula" ):
                listener.exitGroupFormula(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGroupFormula" ):
                return visitor.visitGroupFormula(self)
            else:
                return visitor.visitChildren(self)


    class GreaterEqFormulaContext(FirstOrderFormulaExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.FirstOrderFormulaExprContext
            super().__init__(parser)
            self.left = None # FirstOrderFormulaExprContext
            self.right = None # FirstOrderFormulaExprContext
            self.copyFrom(ctx)
